[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/HUDControl.gd" type="Script" id=1]
[ext_resource path="res://assets/HUD/Ballon.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/PlayBtn.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/PlayBtn-clicked.png" type="Texture" id=4]
[ext_resource path="res://assets/HUD/RestartBtn1.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/RestartBtn2.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/HomeBtn1.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/HomeBtn2.png" type="Texture" id=8]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=9]

[node name="PauseControl" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.364706 )

[node name="Container" type="Container" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.5
margin_top = -184.0
margin_right = 286.5
margin_bottom = 184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )

[node name="ResumeButton" type="TextureButton" parent="Container" index="1"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -158.0
margin_right = 158.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[node name="RestartButton" type="TextureButton" parent="Container" index="2"]

pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.5
margin_top = -158.0
margin_right = 63.5
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[node name="HomeButton" type="TextureButton" parent="Container" index="3"]

pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -158.0
margin_top = -158.0
margin_right = -30.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[node name="PauseLabel" type="Label" parent="Container" index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -103.0
margin_right = 2.5
margin_bottom = -57.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 9 )
text = "Pause"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[connection signal="pressed" from="Container/ResumeButton" to="." method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="Container/RestartButton" to="." method="_on_RestartButton_pressed"]

[connection signal="pressed" from="Container/HomeButton" to="." method="_on_HomeButton_pressed"]


